# obiai

./: .gitattributes  .gitignore  CONTRIBUTING.md  MIGRATION_REPORT.md  Makefile  README.md  Why Everyone Else Is Wrong_ The OBINexus Technical Manifesto.md  index.html  pyproject.toml  refactor_obiai.sh  requirements-dev.txt  requirements.txt  structure_verification.txt
docs/obi/: README.md  package-lock.json  package.json  pyproject.toml
docs/obi/.circleci/: config.yml
docs/obi/.github/workflows/: publish.yml
docs/obi/docs/public/: bibliography.html  index.html  manifest.json  papers.html  robots.txt  search.json  sitemap.xml
docs/obi/docs/public/assets/: obi.css  obi.js
docs/obi/docs/public/source-html/: index.html  manifest.json
docs/obi/docs/public/source-html/archive/: a-bayesian-network-framework-for-mitigating-bias-in-machine-learning-systems.html  a-categorical-foundation-for-epistemic-ai-systems-with-continuous-space-navigation-and-dimensional-innovation.html  aegis-proof-1-2-formal-verification-of-traversal-cost-function-for-epistemological-dag-inference.html  dag-cost-function-and-ephemeris-step-formal-mathematical-specification-for-obiai-filter-flash-transitions.html  data-drift-mitigation-for-a-polyglot-ontological-bayesian-infrastructure-for-unbiased-ethical-safety-critical-intelligen.html  dimensional-game-theory-varadic-strategy-in-multi-domain.html  dimensional-game-theory.html  (+47 more)
docs/obi/docs/public/sources/: a-bayesian-network-framework-for-mitigating-bias-in-machine-learning-systems.html  a-categorical-foundation-for-epistemic-ai-systems-with-continuous-space-navigation-and-dimension-2.html  a-categorical-foundation-for-epistemic-ai-systems-with-continuous-space-navigation-and-dimension.html  a-non-isomorphic-lattice-based-post-quantum-identity-proof.html  aegis-proof-1-2-formal-verification-of-traversal-cost-function-for-epistemological-dag-inference-2.html  aegis-proof-1-2-formal-verification-of-traversal-cost-function-for-epistemological-dag-inference.html  aegis-proof-3-1-3-2-mathematical-verification-suite-filter-flash-monotonicity-and-hybrid-mode-co.html  aegis-proof-4-1-computational-implementation-specification-safety-critical-hospital-systems-with-2.html  aegis-proof-4-1-computational-implementation-specification-safety-critical-hospital-systems-with.html  certificates.html  chess-dimensional-game-theory-formal-analysis-of-attack-defense-offense-and-formation-algorithms.html  cryptographic-standard-v1-0.html  dag-cost-function-and-ephemeris-step-formal-mathematical-specification-for-obiai-filter-flash-tr.html  data-drift-mitigation-for-a-polyglot-ontological-bayesian-infrastructure-for-unbiased-ethical-sa.html  deterministic-replay-monoid-homomorphism-and-induction-proof.html  dimensional-game-theory-application-of-non-deterministic-finite-automaton-directed-acyclic-graph.html  dimensional-game-theory-fault-tolerant-cryptographic-integration-for-raf-regulation-as-firmware-.html  dimensional-game-theory-for-ai-2.html  dimensional-game-theory-for-ai.html  dimensional-game-theory-varadic-strategy-in-multi-domain.html  dimensional-game-theory.html  diram-boolean-logic-truth-table-memory-management-gates-2.html  diram-boolean-logic-truth-table-memory-management-gates.html  directed-instruction-random-acess-memory-2.html  dream-system-formal-technical-specification-2.html  dream-system-formal-technical-specification.html  dual-pair-conceptual-architecture-for-obiai-phenomenological-preservation-in-computational-consc-2.html  dual-pair-conceptual-architecture-for-obiai-phenomenological-preservation-in-computational-consc.html  duality-of-descriptions-framework-a-unified-theory-for-quantum-classical-electrical-systems.html  eatv-stream-integration-into-obinexus-framework-a-formalized-specification-with-matrix-verified--2.html  eatv-stream-integration-into-obinexus-framework-a-formalized-specification-with-matrix-verified-.html  fabia-supp-medical-hierarchical-5phase-roadmap-psc.html  fault-tolerant-distributed-systems-a-category-theoretic-approach-1.html  fault-tolerant-distributed-systems-a-category-theoretic-approach-2.html  fault-tolerant-distributed-systems-a-category-theoretic-approach-with-p-topology.html  fault-tolerant-distributed-systems-a-category-theoretic-approach.html  formal-argument-for-bias-in-ai-system-bayesian-modelling.html  formal-mathemitical-reasoning-system-2.html  formal-mathemitical-reasoning-system.html  formal-specification-for-quantum-classical-bridge-with-dimensional-game-theory-integration.html  (+126 more)
docs/obi/docs/source/: README.md
docs/obi/docs/source/md/: certificates.md
docs/obi/docs/source/txt/: FABIA_SUPP_Medical_Hierarchical_5Phase_Roadmap.psc.txt  OBINEXUS_MASTER_INDEX.psc.txt  Ontological Bayesian Intelligence.txt
docs/obi/examples/epistemic-dag/: EpistemicDAG.py  main.py  obinexus_ai_full.py
docs/obi/nw/: 2026-06-23T161730.0267661Z Current.txt  package.json
docs/obi/obi.egg-info/: PKG-INFO  requires.txt
docs/obi/scripts/: build-docs.mjs  clean-docs.mjs  convert-bib.mjs  convert-tex.mjs  docs-lib.mjs  index-docs.mjs  populate-docs.py  serve-docs.mjs  serve-source-html.py  validate-docs.mjs
(+656 files in other folders)
