[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obiai"
version = "2.0.0"
description = "Ontological Bayesian Intelligence Architecture Infrastructure"
authors = [
    {name = "Nnamdi Michael Okpala", email = "nnamdi@obinexuscomputing.org"},
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "torch>=1.9.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "pyyaml>=5.4.0",
    "pytest>=6.2.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pylint",
    "pytest-cov",
    "sphinx",
    "jupyter-book",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["stable", "experimental", "shared"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=src --cov-report=html --cov-report=term-missing"
