[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "obiai-u"
version = "0.2.0"
description = "U — browser video-call AI on the OBI Ontological Bayesian Intelligence architecture"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Nnamdi Michael Okpala / OBINexus Computing"}]
dependencies = [
  "pydantic>=2.8,<3",
  "networkx>=3.3,<4",
  "numpy>=1.26,<3",
  "scipy>=1.13,<2",
  "scikit-learn>=1.5,<2",
  "pyyaml>=6.0,<7",
  "typer>=0.12,<1",
  "rich>=13.7,<15",
  "fastapi>=0.112,<1",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
bayesian = ["pymc>=5.16,<6", "arviz>=0.18,<1"]
# Kept for compatibility with older docs; the API stack is now a core dependency.
api = []
dev = [
  "pytest>=8.2,<9",
  "ruff>=0.5,<1",
  "mypy>=1.10,<2",
  "hypothesis>=6.100,<7",
  "pytest-asyncio>=0.23,<2",
  "httpx>=0.27,<1",
]
all = [
  "pymc>=5.16,<6", "arviz>=0.18,<1",
  "pytest>=8.2,<9", "ruff>=0.5,<1", "mypy>=1.10,<2",
  "hypothesis>=6.100,<7", "pytest-asyncio>=0.23,<2", "httpx>=0.27,<1",
]

[project.scripts]
obiai = "obiai.cli:app"
uai = "obiai.ucli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/obiai"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
# RIFTPlayer (a separate Flask-based symbol-classification tool, not part of
# the obiai package: no __init__.py, not imported anywhere) is excluded
# rather than reformatted.
extend-exclude = ["src/obiai/transcription"]
